# GazeboQuadbot

./: README.md
champ/champ_base/include/: quadruped_controller.h
champ/champ_base/src/: quadruped_controller.cpp
champ/champ_bringup/launch/: bringup.launch.py
champ/champ_gazebo/: CMakeLists.txt
robot_scene/: CMakeLists.txt  package.xml
robot_scene/launch/: diffbot_lidar_gps.launch.py  go2_lidar_gps.launch.py  go2w_base.launch.py  go2w_lidar_gps.launch.py
robot_scene/scripts/: README.txt  cmd_vel_publisher.py
robot_scene/worlds/: bigHHH.world  map1_50x50.world  outdoor_slope.world
robot_scene/xacro/: cam.xacro  camera.xacro  car.xacro  diff_bot.xacro  go2_robot_VLP.xacro  go2w_description.urdf.xacro  interial.xacro  kinect.xacro  laser.xacro  lidar.xacro  move.xacro
robots/configs/go2_config/launch/: gazebo_velodyne.launch.py  go2_lidar_gps.launch.py
robots/configs/go2w_config/config/ros_control/: ros_control.yaml
robots/descriptions/go2_description/xacro/: robot_VLP.xacro
robots/descriptions/go2w_description/: CMakeLists.txt  package.xml
robots/descriptions/go2w_description/config/: joint_controller.yaml  rviz_config.rviz
robots/descriptions/go2w_description/launch/: gazebo.launch.py  go2w_rviz.launch.py
robots/descriptions/go2w_description/models/Building/: model.sdf
robots/descriptions/go2w_description/urdf/: go2w_description.urdf.xacro
robots/go2_config/: CMakeLists.txt  package.xml
robots/go2_config/config/gait/: gait.yaml
robots/go2_config/launch/: go2_lidar_gps.launch.py  gz_lidar_odom.launch.py
robots/go2_config/scripts/: gz_pose_to_ros2.py
robots/go2_config/worlds/: test_map.world
robots/go2_description/: CMakeLists.txt
robots/go2_description/xacro/: gazebo.xacro  gps.xacro  robot_VLP.xacro
robots/go2w_config/: CMakeLists.txt  package.xml  worlds
robots/go2w_config/config/gait/: gait.yaml
robots/go2w_config/launch/: champ_bringup.launch.py  go2w_lidar_gps.launch.py
robots/go2w_control/: CMakeLists.txt  package.xml
robots/go2w_control/launch/: gazebo_with_high_level.launch.py  gazebo_with_low_level.launch.py  high_level_publisher.launch.py  hybrid_controller.launch.py  joint_publisher.launch.py
robots/go2w_control/src/: high_level_publisher_IHM.py  hybrid_motion_controller.py  joint_publisher_IHM.py
robots/go2w_description/: CMakeLists.txt
robots/go2w_description/urdf/: const.xacro  go2w_description.urdf  go2w_description.urdf.xacro
robots/go2w_description/worlds/: Building.world
robots/mid360_simulation/: CMakeLists.txt  README.md  package.xml
robots/mid360_simulation/include/mid360_simulation/: csv_reader.hpp  mid360_ode_multiray_shape.h  mid360_points_plugin.h
robots/mid360_simulation/meshes/: livox_frame.STL
robots/mid360_simulation/src/: mid360_ode_multiray_shape.cpp  mid360_points_plugin.cpp
robots/mid360_simulation/urdf/: mid360.xacro
