<?xml version="1.0"?>
<package format="3">
  <name>robot_scene</name>
  <version>0.1.0</version>
  <description>Package containing shared resources for robot simulations including maps, worlds, launch files, URDF/XACRO models, and scripts.</description>
  <maintainer email="liulingkun@example.com">liulingkun</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>go2_config</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>go2w_config</exec_depend>
  <exec_depend>go2w_description</exec_depend>
  <exec_depend>go2w_control</exec_depend>
  <exec_depend>mid360_simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
